Adding files to create 'styl' from script runs, bug 163908, r=pink, sr=sfraser.